--- a/src/Components/Navabar/Navbar.scss
+++ b/src/Components/Navabar/Navbar.scss
@@ -20,6 +20,7 @@
     align-items: center;
     justify-content: space-around;
     flex-grow: 2;
+    margin: 0;
 
 }
 
@@ -49,8 +50,67 @@
     color: $background-color;
 }
 
+
+.nav_burger{
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    border: none;
+    color: inherit;
+    display: none;
+}
+
 @media screen and (max-width:767px) {
-    .display-big-screen{
-        display: none;
+    
+    .nav-ul{
+        flex-direction: column;
+        justify-content: center;
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        height: 100vh;
+        padding: 2rem;
+        background-color: aqua;
+        left: 0;
+        align-items: center;
+    }
+    .nav-link{
+        display: block;
+        padding: 1.5rem;
+        font-size: 5vw;
+    }
+
+    .nav_burger{
+        display: block;
+        position: fixed;
+        top:1rem;
+        right: 1rem ;
+    }
+    .nav_burger{
+        cursor: pointer;
+    }
+
+    .burger_bar,
+    .burger_bar::before,.burger_bar::after{
+        display: block;
+        width: 40px;
+        height: 3px;
+        position: relative;
+        border-radius: 3px;
+        background: white;
+    }
+
+    .burger_bar::before,.burger_bar::after{
+        content: "";
+        position: absolute;
+        left: 0;
+    }
+
+    .burger_bar::before{
+        transform: translateY(-12px);
+    }
+    .burger_bar::after{
+        transform: translateY(12px);
+        
     }
 }
