Début de la page à propos : TODO: Corriger les fautes, Ajouter la photo

--- a/public/assets/Style/_mixins.scss
+++ b/public/assets/Style/_mixins.scss
@@ -14,3 +14,15 @@
     background-color: $a-color;
     color: $background-color;
 }
+
+@mixin section-text{
+    display: flex;
+    flex-direction: column;
+    font-family: $poppins-text;
+    align-items: flex-start;
+}
+
+@mixin h1-title{
+    color: $a-color;
+    font-size: 3em;
+}
