--- a/src/Components/Content/Parcours/Parcour-case/ParcoursCase.scss
+++ b/src/Components/Content/Parcours/Parcour-case/ParcoursCase.scss
@@ -1,3 +1,6 @@
 @import "/public/assets/Style/_variables.scss";
 @import "/public/assets/Style/_mixins.scss";
 
+.parcours-case{
+    width: 60%;
+}
