Réglement de quelques détail pour descriptions

--- a/src/Components/Content/Description/Description.scss
+++ b/src/Components/Content/Description/Description.scss
@@ -5,7 +5,7 @@
     @include section-text;
     flex-wrap: wrap;
     width: 60%;
-    height: 90vh;
+    height: 100vh;
 
 
 }
@@ -31,12 +31,14 @@
 }
 
 .description>p{
-    width: 60%;
+    width: 80%;
     flex-wrap: wrap;
+    margin-bottom: 0;
 }
 
 .skills{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .skills>ul{
@@ -85,5 +87,8 @@
 
     .image-of-me{
         display: none;
+    }
+    .description>h2::after{
+        width: 450px;
     }
 }
