--- a/src/Components/Content/Parcours/Parcour-case/ParcoursCase.scss
+++ b/src/Components/Content/Parcours/Parcour-case/ParcoursCase.scss
@@ -4,3 +4,14 @@
 .parcours-case{
     width: 60%;
 }
+ul{
+    list-style-type: "→";
+
+}
+.parcours-case>h3{
+    color: $important-text-color;
+}
+.parcours-case>h4{
+    font-size: 0.8em;
+    color: $important-text-color;
+}
