Correction du bug sur mobile

--- a/src/Components/Content/Parcours/Parcours.scss
+++ b/src/Components/Content/Parcours/Parcours.scss
@@ -5,7 +5,7 @@
     @include section-text;
     flex-wrap: wrap;
     width: 60%;
-    height: 100vh;
+
     display: flex;
 }
 
@@ -25,3 +25,25 @@
     gap: 1.5vw;
 }
 
+@media screen and (max-width:767px){
+    #parcours{
+        width:90%;
+        justify-content:center;
+        align-items:center;
+    }
+    .button-list{
+        flex-direction:column;
+        width:100%;
+    }
+    #parcours>h2::after{
+        width:0px;
+    }
+    .button-list-ul{
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        gap:8vw;
+        padding:0;
+        width:100%
+    }
+}
