--- a/src/Components/Content/Parcours/Parcours-btn/ParcoursBtn.scss
+++ b/src/Components/Content/Parcours/Parcours-btn/ParcoursBtn.scss
@@ -28,3 +28,13 @@
 .list-btn{
     all: unset;
 }
+
+@media screen and (max-width:767px){
+    .list-parcours{
+        display:flex;
+        justify-content:center;
+        border-left: unset;
+        border-bottom: #2B3467 3px solid;
+        padding-left: 0px;
+    }
+}
